# lost_ds

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/sphinx/: .gitignore  requirements.txt
docs/sphinx/source/: conf.py  index.rst  lds.hello.rst
examples/: example.ipynb  lost_coco_annos.parquet  lost_shape_annos.parquet
lost_ds/: __init__.py  compat.py  copy.py  core.py  im_util.py  scheduler.py  util.py
lost_ds/cropping/: api.py  cropping.py  ds_cropper.py
lost_ds/detection/: api.py  bbox_merge.py  detection.py
lost_ds/functional/: api.py  filter.py  mapping.py  split.py  transform.py  validation.py
lost_ds/geometry/: api.py  bbox.py  geometry.py  line.py  lost_geom.py  point.py  polygon.py
lost_ds/io/: file_man.py
lost_ds/masking/: api.py  masking.py
lost_ds/segmentation/: anno_from_seg.py  api.py  instance_seg.py  panoptic_seg.py  semantic_seg.py
lost_ds/vis/: api.py  geometries.py  vis.py
